[package]
name = "blockp2p"
version = "0.1.0"
description = "Fast blockchain broadcast with scalable p2p network topology"
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
edition = "2021"

[dependencies]
bincode = "1.3.3"
blake3 = "1.3.3"
blsttc = "8.0.1"
bytebuffer = "2.0.1"
ed25519-dalek = "1"
qp2p = { version = "0.34", features = ["structopt"] }
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.91"
structopt = "0.3"
thiserror = "1"
x25519-dalek = "1"
