[package]
name = "blockp2p"
version = "0.1.0"
description = "Enabling fast blockchain broadcast with scalable p2p network topology"
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
repository = "https://github.com/kobby-pentangeli/blockp2p"
readme = "README.md"
license = "MIT or APACHE-2.0"
edition = "2021"

[dependencies]
aes = "0.8.2"
bincode = "1.3.3"
blake3 = "1.3.3"
blsttc = "8.0.1"
bytebuffer = "2.0.1"
bytes = { version = "1.3.0", features = ["serde"] }
crossbeam-channel = "0.5.6"
ed25519-dalek = "1"
log = "0.4.17"
multibase = "0.9.1"
qp2p = { version = "0.35", features = ["structopt"] }
rand = "0.8.5"
# Required by x25519-dalek
rand_core = { version = "0.5", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.91"
structopt = "0.3"
thiserror = "1"
x25519-dalek = "1"
